# ros-tms-perception

./: .gitignore  LICENSE  README.md
client_apps/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
client_apps/image_publisher/: build.gradle
ros_cnn_server/: CMakeLists.txt  package.xml
ros_cnn_server/scripts/: config.py  server.py  server_caffe.py  server_chainer.py
ros_cnn_server/scripts/caffe/: server_caffe.py
ros_cnn_server/scripts/chainer/: server_chainer.py
tms_sa_rcnn/: CMakeLists.txt  package.xml
tms_ss_android/: .gitignore  CMakeLists.txt  README.md  build.gradle  package.xml  settings.gradle
tms_ss_android/faster_rcnn_client/: build.gradle
tms_ss_cnn/: CMakeLists.txt  README.md  package.xml
tms_ss_cnn/nodes/caffe/: server_caffe.py
tms_ss_cnn/nodes/chainer/: _init_paths.py
tms_ss_rcnn/: CMakeLists.txt  README.md  package.xml
tms_ss_rcnn/models/houseware/VGG16/faster_rcnn_end2end/: solver.prototxt  test.prototxt  train.prototxt
tms_ss_rcnn/models/houseware/ZF/faster_rcnn_alt_opt/: faster_rcnn_test.pt  stage1_fast_rcnn_solver30k40k.pt  stage1_fast_rcnn_train.pt  stage1_rpn_solver60k80k.pt  stage1_rpn_train.pt  stage2_fast_rcnn_solver30k40k.pt  stage2_fast_rcnn_train.pt  stage2_rpn_solver60k80k.pt  stage2_rpn_train.pt
tms_ss_rcnn/models/houseware/ZF/faster_rcnn_end2end/: solver.prototxt  test.prototxt  train.prototxt
tms_ss_rcnn/nodes/: faster_rcnn_houseware.py  faster_rcnn_houseware_debug.py  faster_rcnn_houseware_experiment.py  faster_rcnn_pascalvoc_gpu.py
tms_ss_rcnn/nodes/client/: client_uvc.py  client_video.py
tms_ss_rcnn/scripts/chainer/: server_chainer.py
tms_ss_rcnn/scripts/faster_rcnn/: client_xtion.py  faster_rcnn.py  faster_rcnn_client.py  faster_rcnn_demo.py  faster_rcnn_gpu_workaround.py
tms_ss_rcnn/srv/: obj_detection.srv
tms_ss_rcnn/tms_ss_rcnn/models/: fetch_houseware_model.sh
tms_ss_rcnn/tms_ss_rcnn/nodes/: faster_rcnn.py
tms_ss_rcnn/tms_ss_rcnn/nodes/client/: client_xtion.py
tms_ss_rcnn/tms_ss_rcnn/scripts/: faster_rcnn_gpu.py
tms_ss_rcnn/tms_ss_rcnn/scripts/client_scripts/: client_uvc.py
tms_ss_rcnn/tms_ss_rcnn_client/: CMakeLists.txt  build.gradle  package.xml
tms_ss_rcnn/tms_ss_rcnn_client/object_scouter/src/main/java/com/github/kazuto1011/tms_ss_rcnn_client/object_scouter/: VariableJavaCameraView.java
tms_ss_rcnn/tms_ss_rcnn_client/object_scouter/src/main/res/layout/: main.xml
tms_ss_rcnn_client/: .gitignore  package.xml  settings.gradle
tms_ss_segnet/: README.md
tms_ss_segnet/tms_ss_segnet/: CMakeLists.txt  package.xml
tms_ss_segnet/tms_ss_segnet/nodes/: config.py  segnet.py
tms_ss_segnet/tms_ss_segnet/nodes/client/: client_loaded_image.py  client_uvc.py
tms_ss_segnet/tms_ss_segnet/srv/: segmentation.srv
tms_ss_ssd/: CMakeLists.txt  README.md  package.xml
(+39 files in other folders)
