<?xml version="1.0"?>
<package>
  <name>ros_cnn_server</name>
  <version>0.0.0</version>
  <description>The ros_cnn_server package</description>

  <maintainer email="k_nakashima@irvs.ait.kyushu-u.ac.jp">kazuto1011</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>

</package>