<?xml version="1.0"?>
<package>
  <name>tms_ss_rcnn_client</name>
  <version>0.1.0</version>
  <description>The tms_ss_rcnn_client package</description>

  <maintainer email="k_nakashima@irvs.ait.kyushu-u.ac.jp">kazuto1011</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>android_core</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_core</build_depend>
  <build_depend>std_msgs</build_depend>

</package>
